clusters/hive/apps/adinas-gavriliu-com/k8s-manifests/filebrowser-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: filebrowser
  name: filebrowser
  namespace: adinas-gavriliu-com
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: tcp-80
  selector:
    app: filebrowser
  sessionAffinity: None
  type: ClusterIP
