clusters/hive/apps/adinas-gavriliu-com/k8s-manifests/filebrowser-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: adinas-gavriliu-com
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: adinas.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: filebrowser
                port:
                  number: 80
            path: /
            pathType: Prefix
